# smallcv

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shufflenetv2.cpp  simplepose.cpp  smallcv.cpp  smallcv.h  squeezenet.cpp  squeezenet_c_api.cpp  yolov5.cpp
.github/workflows/: rebase.yml  unit_test.yml
api/smallcv/: benchmark.hpp  border.hpp  imageio.hpp  imdraw.hpp  imshow.hpp  log.hpp  mat.hpp  resize.hpp  smallcv.hpp
cmake/: deps.cmake  output_dir.cmake  overlook.cmake
examples/: CMakeLists.txt  example.cpp
examples/ncnn/: shufflenetv2.cpp  simplepose.cpp  squeezenet.cpp  squeezenet_c_api.cpp
smallcv/: fc_log.h  imdraw.cpp  imdraw.hpp  improc_private.cpp  improc_private.hpp  imshow.cpp  imshow.hpp  mat.hpp  smallcv.cpp  smallcv.hpp
smallcv/api/: imdraw.hpp  imshow.hpp  mat.hpp  smallcv.hpp  tensor.hpp
smallcv/impl/: fc_log.c  image_io.cpp  imdraw.cpp  improc_private.cpp  improc_private.hpp  imshow.cpp  mat.cpp  scalar.cpp  smallcv.cpp  tensor.cpp
smallcv/test/: test_mat.cpp
src/: imdraw.cpp  imgproc.cpp  imshow.cpp  loadsave.cpp  smallcv.cpp  smallcv.hpp  timer.cpp
src/smallcv/: benchmark.cpp  border.cpp  imageio.cpp  imdraw.cpp  improc_private.cpp  improc_private.hpp  imshow.cpp  resize.cpp  smallcv.cpp  version.h.in
tests/: cv_helper.hpp  test_loadsave.cpp  test_size.cpp  test_version.cpp
